Fix carrot logo stretch.

--- a/scss/partials/_whats_new_modal.scss
+++ b/scss/partials/_whats_new_modal.scss
@@ -48,10 +48,10 @@ div.whats-new-modal-container {
       div.carrot-logo {
         position: relative;
         background-image: cdnUrl("/img/ML/carrot_logo.svg");
-        width: 82px;
+        width: 45px;
         height: 82px;
         background-repeat: no-repeat;
-        background-size: 52px 82px;
+        background-size: 45px 82px;
         background-position: center;
         margin: 0px auto;
       }
